--- a/Style.css
+++ b/Style.css
@@ -1,46 +1,45 @@
 .DSRL-Logo{
 
-    height: 100px;
-    justify-items: left;
-    justify-content:left;
+    height: 90px;
+    border-radius: 5%;
     position: absolute;
+    top: 3px;
+   
 }
+
 
 .navbar{
     display: flex;
+    font-size: 25px;  
 
 }
 
-Header{
+header{
   display: flex;
-  position: absolute;
-  justify-content: center;
   justify-content: space-between;
   margin-top: -10px;
-  color: aliceblue;
-  width: 100%;
+  color: rgb(0, 0, 0);
+  width: 98.5%;
   padding: 10px 5px;
-  background-color: #233224;
-  margin: bottom 50px;
+  background-color: rgb(255, 255, 255);
+  
 }
 
-
-
-
 #SiteName{
-position: absolute;
-width: 129px;
-height: 70px;
-left: 168px;
-top: 30px;
+    
+    position: absolute;
+    width: 129px;
+    height: 70px;
+    left: 115px;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 4;
+    font-size: 18px;
+    line-height: 170%;
+    color: #000000;
+    margin-right: px;
+}
 
-font-family: 'Poppins';
-font-style: normal;
-font-weight: 400;
-font-size: 18px;
-line-height: 170%;
-
-color: #fffefe;
-
-
+#variables{
+color: #000000;
 }
