--- a/Style.css
+++ b/Style.css
@@ -49,7 +49,7 @@ header{
      #ffffff 50%,
      #adb0c8,
      #7079c1 );
-    padding: 100px;
+    padding: 70px;
     text-align: center;
     color: white; 
     
@@ -59,12 +59,30 @@ header{
 }
 
 #ConferanceTitle{
-    color: #000000;
-    font-size: 70px;
-    width:70%;
-    
+    color: #07003B;
+    font-weight: 00000;
+    font-size: 60px;
+    width:50%;
+    text-shadow: 1.5px 1.5px #716c6c;
+    font-family: 'Archivo';
+
 }
 #CustomDSLogo{
 
+    height: 0%;
 
+}
+
+#CustomDSLogo2{
+
+    height: 50%;
+    width: 20%;
+}
+
+#LocationInfo{
+    color: #4b4a4e;
+    font-weight: 00000;
+    font-size: 20px;
+    width:50%;
+    font-family: 'Archivo';
 }
