--- a/Style.css
+++ b/Style.css
@@ -9,6 +9,7 @@
 .navbar{
     display: flex;
     font-size: 25px;  
+    font-family: 'Archivo';
 }
 
 header{
@@ -22,41 +23,40 @@ header{
 }
 
 #SiteName{
-    
+    top: -.5px;
     position: absolute;
-    width: 129px;
+    width: 100px;
     height: 70px;
     left: 115px;
-    font-family: 'Poppins';
+    font-family: 'Archivo';
     font-style: normal;
-    font-weight: 4;
-    font-size: 18px;
+    font-size: 15px;
     line-height: 170%;
     color: #000000;
-    margin-right: px;
+    
 }
 
 
 .ConferanceLanding{
 
     display: flex;
-    background-image: url(Images/PurpleSliding\ Background.png);
     background: linear-gradient(to left,
      #ffffff 40%,
      #adb0c8,
      #7079c1 );
     padding: 70px;
     color: white; 
-    text-align: right;
+    margin-left: -7.8px;
 }
 
 #ConferanceTitle{
     color: #080041;
-    font-weight: 00000;
-    font-size: 60px;
-    width:50%;
-    text-shadow: 1.5px 1.5px #716c6c;
-    font-family: 'Archivo';
+    font-weight: 900;
+    font-size: 80px;
+    width:80%;
+    text-shadow: 1.2px 1.2px #655a5a;
+    font-family: 'Archivo Black',sans-serif;
+    line-height: 95%;
 }
 
 
@@ -84,6 +84,7 @@ header{
     font-family: 'Archivo';
     line-height: 300%;
     padding-top: 150px;
+    padding-bottom: 120px;
 
 }
 
@@ -103,9 +104,13 @@ header{
 
 
 
-.MeetHosts{
+#HostingTitle{
 
-    
+    text-align: center;
+    padding: 20px;
+    font-family: 'Archivo Black', sans-serif;
+    font-size: 50px;
+    text-shadow: 1.2px 1.2px #655a5a;
 
 }
 #cards {
@@ -114,6 +119,7 @@ header{
     justify-content: center; /* Center the cards in the container */
     gap: 20px; /* Adds space between the cards */
     padding: 20px; /* Adds padding inside the container */
+
 }
 
 .card-container {
@@ -128,15 +134,18 @@ header{
     border-radius: 8px;
     overflow: hidden; 
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+    height: 400px;
+    font-family:'Archivo' ;
 }
 
 .card img {
     width: 100%;
-    height: auto; /* Maintain aspect ratio */
+    object-fit: contain; /* Ensures the image covers the area without distorting its aspect ratio */
 }
 
 .card-content {
     padding: 16px;
+    text-align: center;
 }
 
 .card-content h3 {
@@ -147,4 +156,17 @@ header{
 .card-content p {
     font-size: 15px;
     line-height: 1.3em;
+    text-align: center;
+}
+
+
+#speaker2 {
+    width: 100%; 
+    max-height: 220px; /* Maintain the maximum height */
+    object-fit:fill/* Ensures the image covers the area without distorting */
+}
+
+.btn{
+    text-decoration: none;
+    color: #000000;
 }
