--- a/Style.css
+++ b/Style.css
@@ -15,11 +15,16 @@
 header{
   display: flex;
   justify-content: space-between;
-  margin-top: -10px;
-  color: rgb(0, 0, 0);
-  width: 98.5%;
+  margin-top: -35px;
+  color: #000000;
+  width: 100%;
   padding: 10px 5px;
   background-color: rgb(255, 255, 255);
+  width: 99%;
+  border:solid 11px #ffffff;
+  margin-left: -9px;
+
+  
 }
 
 #SiteName{
@@ -35,7 +40,13 @@ header{
     color: #000000;
     
 }
+.Whole{
+  
+}
 
+body{
+    background-color: #ffffff;
+}
 
 .ConferanceLanding{
 
@@ -47,6 +58,11 @@ header{
     padding: 70px;
     color: white; 
     margin-left: -7.8px;
+    width:91.55%
+}
+
+.MeetHosts{
+    padding-bottom: 300px;
 }
 
 #ConferanceTitle{
@@ -109,11 +125,15 @@ header{
 
     text-align: center;
     padding: 20px;
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 50px;
+    color: #000000;
+    font-weight: 900;
+    font-size: 60px;
+    width:95%;
     text-shadow: 1.2px 1.2px #655a5a;
-
+    font-family: 'Archivo Black',sans-serif;
+    line-height: 95%;
 }
+
 #cards {
     display: flex;
     flex-wrap: wrap; /* Allows the cards to wrap to the next line if necessary */
@@ -167,7 +187,261 @@ header{
     object-fit:fill/* Ensures the image covers the area without distorting */
 }
 
-.btn{
+.btn12{
     text-decoration: none;
     color: #000000;
+}
+#DayTime{
+
+    color: #000000;
+    font-weight: 900;
+    font-size: 50px;
+    width:100%;
+    text-shadow: 1.2px 1.2px #655a5a;
+    font-family: 'Archivo Black',sans-serif;
+    line-height: 95%;
+    text-align: center;
+    
+    
+}
+
+body{
+    padding:0;
+    margin-top:30px;
+    
+}
+
+.slider-container{
+    position:relative;
+    overflow-x:hidden;
+    height:200px;
+    padding:20px;
+}
+
+.slider-width{
+    position: absolute;
+    display: flex;
+    align-items:start;
+    justify-content: start;
+    left:0;
+    top:0;
+    transition: 0.4s ease-in-out;
+
+}
+.item{
+    background: linear-gradient(to right,
+     #a09bc4 ,
+     #7079c1 60% );
+    width:350px;
+    height:200px;
+    margin:0 10px;
+    text-align:center;
+    font-size:10px;
+    font-weight:800;
+    display:flex;
+    align-items:center;
+    justify-content: center;
+    color:#ffffff;
+    border-radius: 10%;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    text-shadow: 1.2px 1.2px #655a5a;
+    box-shadow:3px 3px 3px #000000;
+}
+
+.btn{
+    background: #000000 60% ;  
+    color: #ffffff;  
+    font-size:40px;
+    margin:20px;
+    padding:2px 13px;
+    cursor:pointer;
+    position:absolute;
+    left:54%;
+    transform: translate(-50%);
+    border:solid 2px #000000;;
+    border-radius: 90px;
+    
+}
+.btn2{
+
+    background: #000000;
+    font-size:40px;
+    color: #ffffff;
+    margin:20px;
+    padding:2px 13px;
+    cursor:pointer;
+    position:absolute;
+    left:43%;
+    transform: translate(-50%);
+    border:solid 2px #000000;;
+    border-radius: 90px;
+    
+    
+}
+
+.btn3{
+
+    color: rgb(0, 0, 0);
+    text-decoration: none;
+}
+
+
+
+.slider-container2{
+    position:relative;
+    overflow-x:hidden;
+    height:200px;
+    padding:20px;
+}
+
+
+.slider-width2{
+    position: absolute;
+    display: flex;
+    align-items:start;
+    justify-content: start;
+    left:0;
+    top:0;
+    transition: 0.4s ease-in-out;
+}
+.item2{
+    background: linear-gradient(to right,
+     #a09bc4 ,
+     #7079c1 60% );
+    width:350px;
+    height:200px;
+    margin:0 10px;
+    text-align:center;
+    font-size:10px;
+    font-weight:800;
+    display:flex;
+    align-items:center;
+    justify-content: center;
+    color:#ffffff;
+    border-radius: 10%;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    text-shadow: 1.2px 1.2px #655a5a;
+    box-shadow:3px 3px 3px #000000;
+}
+
+
+
+.btn5{
+    background: linear-gradient(to right,
+     #a09bc4 ,
+     #7079c1 60% );
+    color:#fff;
+    font-size:40px;
+    margin:30px;
+    padding:2px 13px;
+    cursor:pointer;
+    position:absolute;
+    left:50%;
+    transform: translate(-50%);
+    border-radius: 20px;
+}
+.btn6{
+    background:rgb(0, 0, 0) ;
+    color:#fff;
+    font-size:40px;
+    margin:20px;
+    padding:2px 13px;
+    cursor:pointer;
+    position:absolute;
+    left:43%;
+    transform: translate(-50%);
+    border:solid 2px #000000;
+    border-radius: 90px;
+}
+
+
+#words{
+    line-height: 16px;
+}
+
+#TimeEvents{
+    font-size: 20px;
+
+}
+
+#Time{
+    font-size:40px;
+
+
+}
+
+#EventDescription{
+    font-size: 12px;
+    padding:10px
+
+}
+
+#names{
+    font-size: 10px;
+}
+
+
+#swipe{
+
+    padding:10px;
+    padding-bottom: 20px;
+
+}
+
+footer {
+    background-color: #333;
+    color: #fff;
+    padding: 10px 0;
+    position: relative;
+    bottom: 0;
+    width: 100%;
+}
+
+.footer-content {
+    display: flex;
+    justify-content: space-around;
+    max-width: 1200px;
+    margin: auto;
+}
+
+.footer-section {
+    flex: 1;
+    padding: 10px;
+}
+
+.footer-section h2 {
+    font-size: 18px;
+    margin-bottom: 10px;
+}
+
+.footer-section p, .footer-section ul, .footer-section a {
+    font-size: 14px;
+    line-height: 1.6;
+    color: #bbb;
+}
+
+.footer-section ul {
+    list-style: none;
+    padding: 0;
+}
+
+.footer-section ul li {
+    margin-bottom: 10px;
+}
+
+.footer-section ul li a {
+    text-decoration: none;
+    color: #bbb;
+    transition: color 0.3s;
+}
+
+.footer-section ul li a:hover {
+    color: #fff;
+}
+
+.footer-bottom {
+    text-align: center;
+    margin-top: 20px;
+    border-top: 1px solid #555;
+    padding-top: 10px;
 }
