--- a/Style.css
+++ b/Style.css
@@ -70,7 +70,7 @@ body{
      #adb0c8 ,
      #7079c1 );
     padding: 70px;
-    color: white; 
+    color: rgb(146, 85, 85); 
     margin-left: -7.8px;
     width:91.55%;
     border: #000000;
