--- a/style2.css
+++ b/style2.css
@@ -228,9 +228,14 @@ html{
     color: #ffffff;
     font-family: 'Archivo Black',sans-serif;
     
+ }
 
 
-
+ #Registration{
+    text-align: center;
+    padding-top: 20px ; /* Optional: Adds some space around the section */
+    color: #000000;
+    font-family: 'Archivo Black',sans-serif;
  }
  
  #cards {
@@ -441,6 +446,7 @@ html{
  .Sponsers{
      gap: 50px;
      justify-content: space-between;
+     text-align: center;
      
    
  }
